--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
           branch: main
           force: true
 
@@ -40,4 +40,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
